--- a/src/main/resources/templates/login-form.html
+++ b/src/main/resources/templates/login-form.html
@@ -13,34 +13,7 @@
 
 <body>
 
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a th:href="@{/}" class="navbar-brand">Home</a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu"
-                    aria-controls="menu" aria-expanded="false" aria-label="Show / Hide Menu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-
-            <div class="collapse navbar-collapse" id="menu">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a th:href="@{/clientes}" class="nav-link text-white">Clientes</a></li>
-                    <li class="nav-item"><a th:href="@{/pedidos}"  class="nav-link text-white">Pedidos</a></li>
-                    <li class="nav-item"><a th:href="@{/estadospedidos}"  class="nav-link text-white">Estados Ped</a></li>
-                    <li class="nav-item"><a th:href="@{/usuarios}"  class="nav-link text-white">Usuarios</a></li>
-                    <li class="nav-item"><a th:href="@{/roles}"  class="nav-link text-white">Roles</a></li>
-
-                </ul>
-
-                <a class="btn btn-light" th:href="@{/logout}" >Sign out</a>
-            </div>
-        </div>
-    </nav>
-
-
-</header>
+<header th:replace="fragments/auth-header :: header"></header>
 
     <div class="container p-5">
         <div class="row">
@@ -78,8 +51,7 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
+<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 <script th:src="@{/js/validation.js}"></script>
 </body>
 </html>
